--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ header {
     
     text-align: center;
     text-shadow: 3px 3px 3pc rgba(0, 0, 0, 0.411);
+
+    padding: 50px;
     
 }
 header h1 {
@@ -75,7 +77,7 @@ nav a:hover {
 
 main {
   background-color: white;
-  max-width: 600px;
+  max-width: 800px;
   min-height: 320px ;
   margin: auto;
 }
